# LLM-API

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  run.py  set_vscode_python.sh  setup.sh
app/: main.py
app/config/: settings.py
app/controllers/: base_controller.py  health_controller.py  llm_controller.py
app/models/: base_models.py
app/services/: base_service.py  llm_service.py  load_balancer.py  provider_clients.py
app/utils/: helpers.py  rate_limit_monitor.py  rate_limiter.py
app/views/: response_formatter.py
