[project]
name = "llm-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ujwal",email = "ujwalujwalc@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

