[project]
name = "llm-api"
version = "0.1.0"
description = ""
authors = [
    {name = "ujwal",email = "ujwalujwalc@gmail.com"}
]
readme = "README.md"
requires-python = "3.11.9"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "logger (>=1.4,<2.0)",
    "uvicorn[standard] (>=0.30.0,<0.31.0)",
    "python-dotenv (>=1.0.0,<2.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

